fix: svg icon size
Fix svg icon size being too small when deployed in WordPress caused by
svg icon heights being smaller than their widths.

--- a/src/css/_icons.scss
+++ b/src/css/_icons.scss
@@ -12,7 +12,7 @@
   background-position: center;
 
   fill: currentColor;
-  height: $control-button-height;
+  height: $control-button-width-4-3;
   width: $control-button-width-4-3;
   @include transition(fill $icon-unhighlight-time);
 
