--- a/src/css/_private-variables.scss
+++ b/src/css/_private-variables.scss
@@ -36,7 +36,7 @@ $big-play-button--height: 6.4em !default;
 $slider-height: 0.2em;
 $slider-height-hover: 0.2em;
 $slider-handle-height: 0.8em;
-$slider-handle-height-scale: 1.6;
+$slider-handle-height-scale: 1.8;
 
 // Loading vjs-spinner-fade
 $loading-spinner-size: $big-play-button--width;
@@ -50,7 +50,7 @@ $control-button-width-4-3: 2.4em;
 $control-button-spacing: 1.8em;
 
 // Volume
-$volume-slider-length: 14.4em;
+$volume-slider-length: 11.2em;
 $volume-slider-margin: 0.8em;
 
 // Timestamps
